force-app/main/default/objects/Registration_Request__c/fields/Youth_Probation_Officer__c.field-meta.xml
<CustomField>
    <fullName>Youth_Probation_Officer__c</fullName>
    <label>ק. שירות מבחן לנוער</label>
    <length>100</length>
    <type>Text</type>
</CustomField>