force-app/main/default/objects/Registration_Request__c/fields/Youth_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Youth_Promotion__c</fullName>
    <label>מטופל בקידום נוער</label>
    <type>Text</type>
    <length>10</length>
</CustomField>