force-app/main/default/objects/Registration_Request__c/fields/Youth_Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Youth_Worker_Name__c</fullName>
    <label>שם עובד קידום נוער</label>
    <type>Text</type>
    <length>100</length>
</CustomField>