force-app/main/default/objects/Registration_Request__c/fields/Youth_Worker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Youth_Worker_Phone__c</fullName>
    <label>טלפון עובד קידום נוער</label>
    <type>Phone</type>
</CustomField>