force-app/main/default/objects/Registration_Request__c/listViews/All3.listView-meta.xml
<ListView>
    <fullName>All3</fullName>
    <columns>NAME</columns>
    <columns>Assessment_File_Uploaded__c</columns>
    <columns>Grade_Sheet_Uploaded__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>