force-app/main/default/objects/Registration_Request__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Warm_House__c</columns>
    <columns>Student_First_Name__c</columns>
    <columns>Student_Last_Name__c</columns>
    <columns>School_Name__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Consent_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>School_Counselor_Name__c</columns>
    <columns>Parent_Email__c</columns>
    <columns>Counselor_Email__c</columns>
    <columns>Assessment_File_Uploaded__c</columns>
    <columns>Grade_Sheet_Uploaded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Review,Consent Signed,Pending Consent,In Progress,Data Submitted</value>
    </filters>
    <filters>
        <field>Warm_House__c</field>
        <operation>equals</operation>
        <value>בן יהודה</value>
    </filters>
    <label>בן יהודה בתהליך</label>
</ListView>